try to make team view work

--- a/views/team.erb
+++ b/views/team.erb
@@ -1,3 +1,4 @@
+# team.erb
 <div class='staff'>
   <img src='/engineer.png' alt='founder' class='small-thumb' />
   <p class='employee'>Julia | Engineer</p>
