--- a/views/category.erb
+++ b/views/category.erb
@@ -1,1 +1,20 @@
 <!--Category-->
+
+<h1> <%= @page_title != 'us' ? @page_title.capitalize : @page_title.upcase %> </h1>
+<div id='wrapper'>
+
+	<% @products.each do |product| %>
+	  <a href='/products/<%= product.id %>'>
+	  <div class='product'>
+	    <div class='thumb'>
+	      <img src='<%= product.url %>' />
+	    </div>
+	    <div class='caption'>
+	      <%= product.title %>
+	    </div>
+	  </div>
+	  </a>
+	<% end %>
+
+</div>
+<a class='small-button' href='/products'> View All Products </a>
