--- a/public/style.css
+++ b/public/style.css
@@ -143,7 +143,7 @@ img.logo {
   color: #000000;
 }
 
-.button {
+.button, .backdrop {
   top: 60%;
   left: 43%;
   width: 200px;
@@ -194,10 +194,4 @@ img.logo {
 
 .employee, .bio {
   display: block;
-}
-
-.hero {
-  display:block;
-  margin-left: auto;
-  margin-right: auto;
 }
