Add single.erb page and helper method for title case

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <!--Home-->
 <h1><%= @page_title %></h1>
 <div id='wrapper'>
-	<img src='hero.png' alt='hero image' class='hero'/>
+	<img src='hero.png' alt='hero image' class='backdrop'/>
 	<img src='logo-white.png' alt='logo image' class='logo'/>
 	<h1 id='site-title'>Fomotograph</h1>
 	<h2 id='site-subtitle'>Custom travel photos on demand</h2>
