--- a/views/products.erb
+++ b/views/products.erb
@@ -9,7 +9,7 @@
       <img src='<%= product.url %>' />
     </div>
     <div class='caption'>
-      <%= product.location != 'us' ? product.location.capitalize : product.location.upcase %>
+      <%= titlecase(product.location) %>
     </div>
   </div>
   </a>
