fix caption variable in category.erb

--- a/views/category.erb
+++ b/views/category.erb
@@ -10,7 +10,7 @@
 	      <img src='<%= product.url %>' />
 	    </div>
 	    <div class='caption'>
-	      <%= titlecase(@product.location) %>
+	      <%= titlecase(product.location) %>
 	    </div>
 	  </div>
 	  </a>
