--- a/views/single.erb
+++ b/views/single.erb
@@ -1,9 +1,9 @@
 <!--Single Location-->
-<h1><%= titlecase(product.location) %></h1>
+<h1><%= titlecase(@product.location) %></h1>
 <a class='small-button' href='#'>Fomotograph Me!</a>
 <p class='summary'> <%= @product.summary %> </p>
 <p class='summary'>Order your prints today for $<%= @product.price %></p>
 <img class='full' src='<%= @product.url %>' />
 <a class='small-button' href='/products/location/<%= @product.location %>'> 
-  View All <%= titlecase(product.location) %> Products 
+  View All <%= titlecase(@product.location) %> Products 
 </a>
