--- a/public/style.css
+++ b/public/style.css
@@ -143,7 +143,7 @@ img.logo {
   color: #000000;
 }
 
-.button, .backdrop {
+.button {
   top: 60%;
   left: 43%;
   width: 200px;
@@ -193,5 +193,11 @@ img.logo {
 }
 
 .employee, .bio {
+  display: block;
+}
+
+.backdrop {
+  margin-right: auto;
+  margin-left: auto;
   display: block;
 }
