fix button for deals by moving to layout.erb, and fix page call in controller

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,4 @@
-<!--Layout-->
+<!--Template-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,8 +13,9 @@
 
     <div id='header'>
       <a href='/'><img src='/logo-black-text.png' alt='logo image' class='logo'/></a>
-      <a href='/team' class='nav'>Team</a>
+      <a href='/deals' class='nav'>Deals</a>
       <a href='/products' class='nav'>Products</a>
+      <a href='/team' class='nav'>Team</a>
     </div>
 
     <div id='main'>
