--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,7 +15,7 @@
       <a href='/'><img src='/logo-black-text.png' alt='logo image' class='logo'/></a>
       <a href='/team' class='nav'>Team</a>
       <a href='/products' class='nav'>Products</a>
-      <a href='/products/deals' class='nav'>Deals</a>
+      <a href='/deals' class='nav'>Deals</a>
     </div>
 
     <div id='main'>
